Kaminski-stemmer wersja przetestowana.