@@ -1,6 +1,7 @@
 package com.mkaminski.stemmer.processing;
 
 import java.io.InputStream;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -11,18 +12,22 @@ import com.mkaminski.stemmer.dictionary.loader.SerializedTrieDictionaryLoader;
  */
 public class DictionaryLoadStep implements ProcessStep {
 
+    private static Map<String, String> cachedDictionaryMap;
+
     @Override
-    public void makeProcess(ProcessingContext processingContext) {
-        InputStream dictionaryResource = processingContext.getDictSource();
-        if (dictionaryResource == null) {
-            dictionaryResource = this.getClass().getResourceAsStream("pl_dict.ser");
+    public synchronized void makeProcess(ProcessingContext processingContext) {
+        if (cachedDictionaryMap == null) {
+            InputStream dictionaryResource = processingContext.getDictSource();
+            if (dictionaryResource == null) {
+                dictionaryResource = this.getClass().getClassLoader().getResourceAsStream("pl_dict.ser");
+            }
+            cachedDictionaryMap = new SerializedTrieDictionaryLoader().loadDictionary(dictionaryResource);
         }
-        Map<String, String> dictionaryMap = new SerializedTrieDictionaryLoader().loadDictionary(dictionaryResource);
-        processingContext.setDictionary(dictionaryMap);
+        processingContext.setDictionary(cachedDictionaryMap);
     }
 
     @Override
     public List<String> inCommands() {
-        return List.of("stem");
+        return Collections.singletonList("stem");
     }
 }
